hphp/test/zend/good/ext/mysqli/tests/bug66043.php.skipif
<?php
require_once('skipif.inc');
require_once("connect.inc");
if ($IS_MYSQLND) {
    die("skip libmysql only test");
}
require_once('skipifconnectfailure.inc');
?>