hphp/test/zend/bad/ext/ftp/tests/filesize_large.php.skipif
<?php
require 'skipif.inc';
if (2147483647 == PHP_INT_MAX) {
    die('skip 64-bit only');
}
?>